Legg til støtte for brevbakerbrev i skribenten-backend (#793)
* Legg til støtte for brevbakerbrev i skribenten-backend

* Fiks enhetstester
