# pensjon-brevbaker/src/main/kotlin/no/nav/pensjon/brev/routing/TemplateRoutes.kt
@@ -6,7 +6,6 @@ import io.ktor.server.response.*
 import io.ktor.server.routing.*
 import io.ktor.server.util.*
 import no.nav.pensjon.brev.api.TemplateResourceV2
-import no.nav.pensjon.brev.api.description
 import no.nav.pensjon.brev.api.model.maler.BrevbakerBrevdata
 import no.nav.pensjon.brev.api.toLanguage
 import no.nav.pensjon.brev.template.BrevTemplate
@@ -16,13 +15,18 @@ import no.nav.pensjon.brevbaker.api.model.LanguageCode
 inline fun <reified Kode : Enum<Kode>, T : BrevTemplate<BrevbakerBrevdata, Kode>> Route.templateRoutes(resourceV2: TemplateResourceV2<Kode, T>) =
     route("/${resourceV2.name}") {
 
-        get { call.respond(resourceV2.templates.keys) }
+        get {
+            if (call.parameters["includeMetadata"] == "true") {
+                call.respond(resourceV2.templates.map { it.value.description() })
+            } else {
+                call.respond(resourceV2.templates.keys)
+            }
+        }
 
         route("/{kode}") {
             get {
                 val template = call.parameters.getOrFail<Kode>("kode")
                     .let { resourceV2.templates[it] }
-                    ?.template
                     ?.description()
 
                 if (template != null) {
